changing ibmacs to request body
